--- a/RH.API/RH.API/appsettings.json
+++ b/RH.API/RH.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "SERVER=FABIO-NOTE;DATABASE=RHDB;USER ID=sa;Password=@dm1n;TrustServerCertificate=true"
+    "DefaultConnection": "SERVER=FABIO-PC\\SQLEXPRESS;DATABASE=RHDB;USER ID=sa;Password=@dm1n;TrustServerCertificate=true"
   },
   "Logging": {
     "LogLevel": {
